--- a/hello.html
+++ b/hello.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<title> Git Training </title>
 		<meta http-equity="Content-Type" content="text/html; charset=utf-8">
 
-		<link rel="stylesheet" type="text/css" href="design/style.css">
 	</head>
 
 	<body>
-		
+
 		<!-- TITRE -->
+		<div>  
+				Bienvenue dans cette formation GIT !
+		</div>
+
 		<div>
-			Bienvenue dans cette formation GIT !
+			<p>  Je suis un technophile de dernière génération et fan de git. </p>
 		</div>
 
 	</body>
