--- a/hello.html
+++ b/hello.html
@@ -14,8 +14,15 @@
 				Bienvenue dans cette formation GIT !
 		</div>
 
+		<!-- Ma description -->
 		<div>
 			<p>  Je suis un technophile de dernière génération et fan de git. </p>
+		</div>
+
+
+		<!-- Mes récompenses -->
+		<div>
+			<p>  En construction  </p>
 		</div>
 
 	</body>
