--- a/hello.html
+++ b/hello.html
@@ -16,14 +16,20 @@
 
 		<!-- Ma description -->
 		<div>
+			<h1> Ma description </h1>
 			<p>  Je suis un technophile de dernière génération et fan de git. </p>
 		</div>
 
-
 		<!-- Mes récompenses -->
 		<div>
-			<p>  En construction  </p>
+			<h1> Mes récompenses </h1>
+			<p>  <img src="image\medaille_bronze.png"> </p>
 		</div>
 
+		<!-- Mon gist -->
+		<div>
+			<h1>  Mon gist  </h1>
+			<p><script src="https://gist.github.com/msidibe2/3aa86b6f1faa37354e4930c56b24fe30.js"></script> </p>
+		</div>
 	</body>
 </html>
