ajout médaille d'argent

--- a/hello.html
+++ b/hello.html
@@ -23,7 +23,7 @@
 		<!-- Mes récompenses -->
 		<div>
 			<h1> Mes récompenses </h1>
-			<p>  <img src="image\medaille_bronze.png"> </p>
+			<p>  <img src="image\medaille_bronze.png">        <img src="image\medaille_silver.png"> </p>
 		</div>
 
 		<!-- Mon gist -->
