ajout de commande git pull

--- a/hello.html
+++ b/hello.html
@@ -31,5 +31,10 @@
 			<h1>  Mon gist  </h1>
 			<p><script src="https://gist.github.com/msidibe2/3aa86b6f1faa37354e4930c56b24fe30.js"></script> </p>
 		</div>
+		<!-- commandes git -->
+		<div>
+			<h1>  Mes commandes git  </h1>
+			<p> git pull </p>
+		</div>
 	</body>
 </html>
