ajout medaille d'or

--- a/hello.html
+++ b/hello.html
@@ -24,6 +24,7 @@
 		<div>
 			<h1> Mes récompenses </h1>
 			<p>  <img src="image\medaille_bronze.png">        <img src="image\medaille_silver.png"> </p>
+			<p>  <img src="image\medaille_bronze.png"><img src="image\medaille_silver.png"> <img src="image\medaille_gold.png"></p>
 		</div>
 
 		<!-- Mon gist -->
